--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		}
 		var subject_range = [ ['문학', '교과서 ~ 90p까지'], ['영어I', '1, 2과 본문과 4과 본문 첫 페이지'], 
 		['수학I', '교과서 42p ~ 63p'], ['경제', '교과서 ~ 61p까지 (프린트도 참고)'], 
-		['통합과학', '과학1(생명과학): 5단원 [생명 시스템]<br>과학2(물리학): 교과서 3단원 [역학적 시스템]<br>과학3(지구과학): 1단원 [물질의 규칙성과 결합]<br>과학4(화학): 6단원 [화학 변화]'], 
+		['통합과학', '과학1(생명과학): 5단원 [생명 시스템]<br>과학2(물리학): 교과서 3단원 [역학적 시스템]<br>과학3(지구과학): 지필평가에 출제되지 않음.<br>과학4(화학): 6단원 [화학 변화]'], 
 		['일본어I', '교과서 ~ 79p까지 (프린트도 참고)'], ['회계정보 처리 시스템', ''], 
 		['정보처리와 관리', ''], ['영화 콘텐츠 제작', ''], 
 		['응용 프로그래밍 개발', ''], ['컴퓨터 시스템 일반', '진법 ~ 논리회로'] ];
