--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 		document.oncontextmenu = function(e) {
 			return false;
 		}
-		var subject_range = [ ['문학', '교과서 ~ 90p까지'], ['영어I', '1, 2과 본문과 4과 본문 첫 페이지'], 
+		var subject_range = [ ['문학', '[수오재기]_정약용<br>[산속에서]_나희덕<br>[가는 길]_김소월<br>[황만근은 이렇게 말했다]_성석제<br>[눈물]_김현승<br>[참새]_윤오영'], ['영어I', '1, 2과 본문과 4과 본문 첫 페이지'], 
 		['수학I', '교과서 42p ~ 63p'], ['경제', '교과서 ~ 61p까지 (프린트도 참고)'], 
 		['통합과학', '과학1(생명과학): 5단원 [생명 시스템]<br>과학2(물리학): 교과서 3단원 [역학적 시스템]<br>과학3(지구과학): 지필평가에 출제되지 않음.<br>과학4(화학): 6단원 [화학 변화]'], 
-		['일본어I', '교과서 ~ 79p까지 (프린트도 참고)'], ['회계정보 처리 시스템', ''], 
+		['일본어I', '교과서 10p ~ 79p까지 (프린트도 참고)'], ['회계정보 처리 시스템', ''], 
 		['정보처리와 관리', ''], ['영화 콘텐츠 제작', ''], 
 		['응용 프로그래밍 개발', ''], ['컴퓨터 시스템 일반', '진법 ~ 논리회로'] ];
 		var i;
