--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 		document.oncontextmenu = function(e) {
 			return false;
 		}
-		var subject_range = [ ['문학', '[수오재기]_정약용<br>[산속에서]_나희덕<br>[가는 길]_김소월<br>[황만근은 이렇게 말했다]_성석제<br>[눈물]_김현승<br>[참새]_윤오영'], ['영어I', '1, 2과 본문과 4과 본문 첫 페이지'], 
+		var subject_range = [ ['문학', '[수오재기]_정약용<br>[산속에서]_나희덕<br>[가는 길]_김소월<br>[황만근은 이렇게 말했다]_성석제<br>[눈물]_김현승<br>[참새]_윤오영'], 
+                ['영어I', '1과 본문 [Learn from Failures]<br>2과 본문 [Technology and Life]<br>4과 본문 [A Trip for Cultural Diversity] <u>첫 페이지</u>'], 
 		['수학I', '교과서 42p ~ 63p'], ['경제', '교과서 ~ 61p까지 (프린트도 참고)'], 
 		['통합과학', '과학1(생명과학): 5단원 [생명 시스템]<br>과학2(물리학): 교과서 3단원 [역학적 시스템]<br>과학3(지구과학): 지필평가에 출제되지 않음.<br>과학4(화학): 6단원 [화학 변화]'], 
 		['일본어I', '교과서 10p ~ 79p까지 (프린트도 참고)'], ['회계정보 처리 시스템', ''], 
