--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 
 <body>
-	<h1>1학기 2차 지필평가 시험범위</h1>
+	<h1>1학기 2차 지필평가<br>시험범위</h1>
 	<table border="1" align="center">
 		<tr>
 			<th style="width:100px;">교과목</th>
