--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		['통합과학', '과학1(생명과학): 5단원 [생명 시스템]<br>과학2(물리학): 교과서 3단원 [역학적 시스템]<br><del>과학3(지구과학): 지필평가에 출제되지 않음.</del><br>과학4(화학): 6단원 [화학 변화]'], 
 		['일본어I', '교과서 10p ~ 79p까지 (프린트도 참고)'],
                 ['회계정보 처리 시스템', ''], 
-		['정보처리와 관리', ''], 
+		['정보처리와 관리', '교과서 62p ~ 엑셀 함수 부분'], 
                 ['영화 콘텐츠 제작', ''], 
 		['응용 프로그래밍 개발', ''],
                 ['컴퓨터 시스템 일반', ''] ];
