--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		['일본어I', '교과서 10p ~ 79p까지 (프린트도 참고)'],
                 ['회계정보 처리 시스템', ''], 
 		['정보처리와 관리', '교과서 62p ~ 엑셀 함수 부분'], 
-                ['영화 콘텐츠 제작', ''], 
+                ['영화 콘텐츠 제작', '교과서 1p ~ 45p'], 
 		['응용 프로그래밍 개발', ''],
                 ['컴퓨터 시스템 일반', ''] ];
 		var i;
