--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		    ['정보처리와 관리', '교과서 62p ~ 엑셀 함수 부분'], 
                     ['영화 콘텐츠 제작', '교과서 1p ~ 45p'], 
 		    ['응용 프로그래밍 개발', ''],
-                    ['컴퓨터 시스템 일반', '']
+                    ['컴퓨터 시스템 일반', '교과서 8p ~ 93p']
                 ];
 		var i;
 		function writeCell() {
