--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     ['영어I', '1과 본문 [Learn from Failures]<br>2과 본문 [Technology and Life]<br>4과 본문 [A Trip for Cultural Diversity] <u>첫 페이지</u>'], 
 		    ['수학I', '교과서 42p ~ 63p'], ['경제', '교과서 ~ 61p까지 (프린트도 참고)'], 
 		    ['통합과학', '과학1(생명과학): 5단원 [생명 시스템]<br>과학2(물리학): 교과서 3단원 [역학적 시스템]<br><del>과학3(지구과학): 지필평가에 출제되지 않음.</del><br>과학4(화학): 6단원 [화학 변화] 산과 염기 ~ 중화반응'], 
-		    ['일본어I', '교과서 10p ~ 79p까지 (프린트도 참고)'],
+		    ['일본어I', '교과서 10p ~ 79p까지 (프린트도 참고)<hr><h3>※문화 파트</h3>교과서 10~13p, 42p, 58~59p, 74~75p'],
                     ['회계정보 처리 시스템', ''], 
 		    ['정보처리와 관리', '교과서 62p ~ 엑셀 함수 부분'], 
                     ['영화 콘텐츠 제작', '교과서 1p ~ 45p'], 
