--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		    ['일본어I', '교과서 10p ~ 79p까지 (프린트도 참고)<hr><h3>※문화 파트</h3>교과서 10~13p, 42p, 58~59p, 74~75p'],
                     ['회계정보 처리 시스템', '교과서 12p~21p, 64~112p<br>회계의 기본 원리 ~ 유동/비유동 자산/부채/자본'], 
 		    ['정보처리와 관리', '교과서 62p ~ 엑셀 함수 부분'], 
-                    ['영화 콘텐츠 제작', '교과서 1p ~ 45p'], 
+                    ['영화 콘텐츠 제작', '교과서 1p ~ 45p<br>등장 인물과 캐릭터 분석 ~ 시나리오 기본 요소 분석'], 
 		    ['응용 프로그래밍 개발', ''],
                     ['컴퓨터 시스템 일반', '교과서 8p ~ 93p']
                 ];
