--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	</script>
 	
 	<title>시험범위</title>
-	
+
 	<style type="text/css">
 		body { text-align:center; }
 		table { width:300px; }
@@ -64,5 +64,7 @@
 			writeCell();
 		</script>
 	</table>
+        <h1>시험 시간표<h1>
+        <img src="1594286493900.jpg" width="300px">
 </body>
 </html>
