--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
 		</script>
 	</table>
         <h1>시험 시간표<h1>
-        <img src="1594286493900.jpg" width="300px">
+        <img src="20200714_013204.jpg" width="300px">
 </body>
 </html>
